Commit al master del blogspot en su version mas reciente.

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,15 @@
     <title>Blog html</title>
 </head>
 <body>
-    <h1>Aca haremos el blog post</h1>
-    <p>Parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>
+                Este es el titulo atractivo e interesante del post.
+            </h1>
+            <p>
+                Este es el parrafo donde vamos a explicar las cosas increibles.
+            </p>
+        </div>        
+    </div>
 </body>
 </html>
